# ansible-roles

./: .ansible-lint  .gitignore  .gitmodules  .manage.yml  .travis.yml  README.md  Vagrantfile  ansible.cfg  inventory  manage  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
group_vars/: all.yml  kbd_interactive.yml  provider_ec2.yml  provider_linode.yml  provider_metal.yml  provider_packet.yml  provider_vagrant.yml  provider_yandex.yml
scripts/: ci
